objects/Verify_Account__c/Verify_Account__c.object-meta.xml
<CustomObject>
    <label>Verify Account</label>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>Verified Account Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Verified Account</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>