objects/Verify_Account__c/fields/Billing_Information__c.field-meta.xml
<CustomField>
    <fullName>Billing_Information__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Billing Information</label>
    <type>Checkbox</type>
</CustomField>