objects/Verify_Account__c/fields/Contact_Information__c.field-meta.xml
<CustomField>
    <fullName>Contact_Information__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contact Information</label>
    <type>Checkbox</type>
</CustomField>