objects/Verify_Account__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notes</label>
    <type>Checkbox</type>
</CustomField>